fixed image alignment issue in editor with WP 5.5

--- a/styles/editor-style.css
+++ b/styles/editor-style.css
@@ -216,7 +216,7 @@ th {
 }
 
 .wp-block-image {
-  margin: 0;
+  margin: 0 auto;
   line-height: 0;
 }
 
